keep session alive for longer

--- a/browser_extension/manifest.json
+++ b/browser_extension/manifest.json
@@ -7,7 +7,8 @@
     "activeTab",
     "storage",
     "identity",
-    "scripting"
+    "scripting",
+    "alarms"
   ],
   "host_permissions": [
     "<all_urls>"
