--- a/mobile_app/app.json
+++ b/mobile_app/app.json
@@ -9,7 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "backgroundModes": ["fetch", "processing"]
     },
     "android": {
       "adaptiveIcon": {
@@ -40,7 +41,8 @@
         }
       ],
       "expo-sqlite",
-      "expo-apple-authentication"
+      "expo-apple-authentication",
+      "expo-background-task"
     ],
     "experiments": {
       "typedRoutes": true,
