--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -21,6 +21,7 @@
     "expo": "~54.0.30",
     "expo-apple-authentication": "^8.0.8",
     "expo-auth-session": "^7.0.10",
+    "expo-background-task": "^1.0.10",
     "expo-blur": "^15.0.8",
     "expo-constants": "~18.0.12",
     "expo-crypto": "^15.0.8",
