better article loading

--- a/mobile_app/app.json
+++ b/mobile_app/app.json
@@ -10,7 +10,13 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "backgroundModes": ["fetch", "processing"]
+      "backgroundModes": [
+        "fetch",
+        "processing",
+        "fetch",
+        "processing"
+      ],
+      "bundleIdentifier": "com.anonymous.Poche"
     },
     "android": {
       "adaptiveIcon": {
