--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "updateDatabaseTypes": "npx supabase gen types typescript --project-id ixpfqquzduzwktjaumtn > database_types.ts"
+    "updateDatabaseTypes": "supabase gen types typescript --project-id ixpfqquzduzwktjaumtn > database_types.ts"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
