--- a/browser_extension/package.json
+++ b/browser_extension/package.json
@@ -20,9 +20,14 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-react": "^7.23.0",
+    "@babel/preset-typescript": "^7.23.0",
+    "@types/chrome": "^0.0.268",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "babel-loader": "^9.1.3",
     "canvas": "^2.11.2",
     "copy-webpack-plugin": "^11.0.0",
+    "typescript": "^5.3.0",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4"
   }
