--- a/browser_extension/tsconfig.json
+++ b/browser_extension/tsconfig.json
@@ -6,8 +6,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "allowJs": true,
-    "checkJs": false,
+    "allowJs": false,
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
