--- a/mobile_app/app.json
+++ b/mobile_app/app.json
@@ -12,11 +12,12 @@
       "supportsTablet": true,
       "backgroundModes": [
         "fetch",
-        "processing",
-        "fetch",
         "processing"
       ],
-      "bundleIdentifier": "com.anonymous.Poche"
+      "bundleIdentifier": "org.name.Poche",
+      "infoPlist": {
+        "CFBundleIconName": "AppIcon"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -26,7 +27,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "org.name.Poche"
     },
     "web": {
       "output": "static",
@@ -53,6 +55,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "83333a57-a4d4-4230-9c8a-f7e0e788c972"
+      }
     }
   }
 }
