--- a/browser_extension/package.json
+++ b/browser_extension/package.json
@@ -11,7 +11,7 @@
     "icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
-    "@mozilla/readability": "^0.4.4",
+    "defuddle": "^0.6.6",
     "@supabase/supabase-js": "^2.89.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
