--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -12,6 +12,7 @@
     "updateDatabaseTypes": "supabase gen types typescript --project-id ixpfqquzduzwktjaumtn > database_types.ts"
   },
   "dependencies": {
+    "@expo-google-fonts/noto-sans": "^0.4.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
