--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -3,6 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
@@ -24,6 +25,7 @@
     "expo-auth-session": "^7.0.10",
     "expo-background-task": "^1.0.10",
     "expo-blur": "^15.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.12",
     "expo-crypto": "^15.0.8",
     "expo-font": "~14.0.10",
@@ -51,6 +53,7 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "patch-package": "^8.0.1",
     "typescript": "~5.9.2"
   },
   "private": true
