--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       PORT: ${PORT:?PORT is required}
       BETTER_AUTH_SECRET: ${BETTER_AUTH_SECRET:?BETTER_AUTH_SECRET is required}
       BETTER_AUTH_URL: ${BETTER_AUTH_URL:?BETTER_AUTH_URL is required}
-      NODE_ENV: ${NODE_ENV:?NODE_ENV is required}
+      NODE_ENV: production
     ports:
       - "${PORT}:3000"
     healthcheck:
