--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt/live/api.poche.to:/etc/nginx/ssl:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
 
 volumes:
   postgres_data:
