--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       BETTER_AUTH_SECRET: ${BETTER_AUTH_SECRET:?BETTER_AUTH_SECRET is required}
       BETTER_AUTH_URL: ${BETTER_AUTH_URL:?BETTER_AUTH_URL is required}
       NODE_ENV: production
+      RESEND_API_KEY: ${RESEND_API_KEY:?RESEND_API_KEY is required}
     healthcheck:
       test: ["CMD", "node", "-e", "fetch('http://localhost:3000/').then(r => process.exit(r.ok ? 0 : 1)).catch(() => process.exit(1))"]
       interval: 30s
