--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "hono": "^4.6.14",
     "jsdom": "^24.0.0",
     "pg": "^8.13.1",
+    "resend": "^4.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
