added shared folder which is imported as an npm package

--- a/browser_extension/package.json
+++ b/browser_extension/package.json
@@ -11,6 +11,7 @@
     "icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
+    "@poche/shared": "file:../shared",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
