--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "docker:logs": "docker compose logs -f api"
   },
   "dependencies": {
+    "@poche/shared": "file:../shared",
     "@hono/node-server": "^1.13.7",
     "better-auth": "^1.2.0",
     "defuddle": "^0.6.6",
