some infra updates

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -13,8 +13,13 @@ http {
         server_name api.poche.to;
         return 301 https://$host$request_uri;
     }
+    server {
+        listen 80;
+        server_name poche.to;
+        return 301 https://$host$request_uri;
+    }
 
-    # HTTPS server
+    # API HTTPS server
     server {
         listen 443 ssl;
         server_name api.poche.to;
@@ -36,6 +41,26 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_read_timeout 86400;
+        }
+    }
+
+    # Index HTTPS server
+    server {
+        listen 443 ssl;
+        server_name poche.to;
+
+        root /web_app_dist;
+        index index.html;
+
+        ssl_certificate /etc/letsencrypt/live/poche.to/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/poche.to/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+
+        location / {
+            try_files $uri $uri/ /index.html;
         }
     }
 }
