--- a/browser_extension/package.json
+++ b/browser_extension/package.json
@@ -2,9 +2,10 @@
   "name": "poche-browser-extension",
   "version": "1.0.0",
   "description": "Poche - Read it later browser extension",
+  "type": "module",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development --watch",
+    "dev": "vite build --watch --mode development",
+    "build": "vite build",
     "build:chrome": "npm run build && cp -r dist chrome",
     "build:firefox": "npm run build && cp -r dist firefox",
     "build:safari": "npm run build && cp -r dist safari",
@@ -16,19 +17,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/plugin-bugfix-firefox-class-in-computed-class-key": "^7.25.0",
-    "@babel/preset-env": "^7.23.0",
-    "@babel/preset-react": "^7.23.0",
-    "@babel/preset-typescript": "^7.23.0",
+    "@crxjs/vite-plugin": "^2.0.0-beta.28",
     "@types/chrome": "^0.0.268",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "babel-loader": "^9.1.3",
-    "canvas": "^2.11.2",
-    "copy-webpack-plugin": "^11.0.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "typescript": "^5.3.0",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4"
+    "vite": "^5.4.10"
   }
 }
