--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -49,7 +49,7 @@ http {
         listen 443 ssl;
         server_name poche.to;
 
-        root /web_app_dist;
+        root /root/Poche/backend/web_app_dist;
         index index.html;
 
         ssl_certificate /etc/letsencrypt/live/poche.to/fullchain.pem;
