--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -49,8 +49,11 @@ http {
         listen 443 ssl;
         server_name poche.to;
 
-        root /root/Poche/backend/web_app_dist;
+        root /var/www/web_app_dist;
         index index.html;
+
+        # Serve static files with proper MIME types
+        include /etc/nginx/mime.types;
 
         ssl_certificate /etc/letsencrypt/live/poche.to/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/poche.to/privkey.pem;
