--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -53,6 +53,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./web_app_dist:/var/www/web_app_dist:ro
 
 volumes:
   postgres_data:
