--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -55,8 +55,8 @@ http {
         # Serve static files with proper MIME types
         include /etc/nginx/mime.types;
 
-        ssl_certificate /etc/letsencrypt/live/poche.to/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/poche.to/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/api.poche.to/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.poche.to/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
