--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: ${POSTGRES_USER:?POSTGRES_USER is required}
+      # Note: POSTGRES_PASSWORD can't contains special characters (@, :, /, #, etc.)
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
       POSTGRES_DB: ${POSTGRES_DB:?POSTGRES_DB is required}
     volumes:
