--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: postgres:16-alpine
     container_name: poche-db
     restart: unless-stopped
-    # ports:
-    #   - "5432:5432"  # Expose for migrations
+    ports:
+      - "5432:5432"  # Expose for migrations
     environment:
       POSTGRES_USER: ${POSTGRES_USER:?POSTGRES_USER is required}
       # Note: POSTGRES_PASSWORD can't contains special characters (@, :, /, #, etc.)
