--- a/browser_extension/package.json
+++ b/browser_extension/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite build --watch --mode development",
     "build": "vite build",
-    "build:chrome": "npm run build && cp -r dist chrome",
-    "build:firefox": "npm run build && cp -r dist firefox",
+    "build:chrome": "npm run build && rm -rf chrome && cp -r dist chrome",
+    "build:firefox": "vite build --config vite.firefox.config.ts && cp manifest.firefox.json firefox/manifest.json && cp -r icons firefox/icons",
     "build:safari": "npm run build && cp -r dist safari",
     "icons": "node scripts/generate-icons.js"
   },
