--- a/backend/package.json
+++ b/backend/package.json
@@ -22,13 +22,15 @@
     "docker:logs": "docker compose logs -f api"
   },
   "dependencies": {
-    "@poche/shared": "file:../shared",
     "@hono/node-server": "^1.13.7",
+    "@mozilla/readability": "^0.6.0",
+    "@poche/shared": "file:../shared",
     "better-auth": "^1.2.0",
-    "defuddle": "^0.6.6",
+    "defuddle": "^0.7.0",
     "drizzle-orm": "^0.41.0",
     "hono": "^4.6.14",
     "jsdom": "^24.0.0",
+    "node-html-markdown": "^2.0.0",
     "pg": "^8.13.1",
     "resend": "^4.0.0",
     "zod": "^3.24.1"
@@ -42,4 +44,3 @@
     "typescript": "^5.7.2"
   }
 }
-
